Fixed the hamburger menu getting cut off

--- a/frontend/src/components/mobile-view/sidebarmobile.css
+++ b/frontend/src/components/mobile-view/sidebarmobile.css
@@ -47,7 +47,6 @@
     background: #b5d3ff;
     color: #000 !important;
     font-weight: 600 !important;
-    margin: 5px;
     padding: 8px;
     width: 100%;
     font-size: 20px !important;
@@ -112,7 +111,6 @@
     background: #b5d3ff;
     color: #000 !important;
     font-weight: 600 !important;
-    margin: 5px;
     padding: 8px;
     width: 100%;
     font-size: 20px !important;
